# dioxus-heroicons

./: Cargo.toml
src/: outline.rs
