[package]
name = "dioxus-heroicons"
version = "0.1.4"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Dioxus components for heroicons (https://heroicons.com/)"
repository = "https://github.com/houseabsolute/dioxus-heroicons"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev="651ab3e7e393f22f7aee0428bdc63cffcb1e0239" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus.git", rev="651ab3e7e393f22f7aee0428bdc63cffcb1e0239" }


[workspace]
members = ["gen"]

[workspace.metadata.release]
allow-branch = ["master"]
